setting up for the talentpoints

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
 MRUItem2=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/UI
+ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -210,34 +210,31 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/InventorySystem/TalentToken.TalentToken
 OpenAssetsAtExit=/Game/InventorySystem/Consumables/HealthPotion.HealthPotion
-OpenAssetsAtExit=/Game/InventorySystem/Consumables/TalentToken.TalentToken
-OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/InventorySystem/UI/TalentTokenHUD.TalentTokenHUD
-OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
+OpenAssetsAtExit=/Game/InventorySystem/UI/InventoryWG.InventoryWG
+OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_key.BP_key
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem1=/Game/InventorySystem/UI/TalentTokenHUD
-MRUItem2=/Game/Player
-MRUItem3=/Game/InventorySystem/Consumables/TalentToken
+MRUItem0=/Game/MedievalDungeon/Blueprints/BP_key
+MRUItem1=/Game/InventorySystem/Consumables/TalentToken
+MRUItem2=/Game/InventorySystem/UI/InventoryWG
+MRUItem3=/Game/InventorySystem/UI/InventorySlotWG
 MRUItem4=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem5=/Game/InventorySystem/TalentToken
-MRUItem6=/Game/InventorySystem/UI/ChestSlotWG
-MRUItem7=/Game/InventorySystem/Consumables/ManaPotion
-MRUItem8=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem9=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem10=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem11=/Game/InventorySystem/Chest/WorkingChest3
-MRUItem12=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem13=/Game/InventorySystem/UI/InventoryWG
-MRUItem14=/Game/InventorySystem/UI/ChestInventoryWG
-MRUItem15=/Game/InventorySystem/UI/PickupWG
-MRUItem16=/Game/InventorySystem/Consumables/StaminaPotion
-MRUItem17=/Game/InventorySystem/InventoryInst
-MRUItem18=/Game/InventorySystem/Struct_ItemInfo
-MRUItem19=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem5=/Game/InventorySystem/UI/TalentTokenHUD
+MRUItem6=/Game/Player
+MRUItem7=/Game/InventorySystem/TalentToken
+MRUItem8=/Game/InventorySystem/UI/ChestSlotWG
+MRUItem9=/Game/InventorySystem/Consumables/ManaPotion
+MRUItem10=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem11=/Game/InventorySystem/Chest/WorkingChest5
+MRUItem12=/Game/InventorySystem/Chest/WorkingChest4
+MRUItem13=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem14=/Game/InventorySystem/Chest/WorkingChest2
+MRUItem15=/Game/InventorySystem/UI/ChestInventoryWG
+MRUItem16=/Game/InventorySystem/UI/PickupWG
+MRUItem17=/Game/InventorySystem/Consumables/StaminaPotion
+MRUItem18=/Game/InventorySystem/InventoryInst
+MRUItem19=/Game/InventorySystem/Struct_ItemInfo
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -1157,11 +1154,17 @@ TalentTokenHUD_C.Navigation=True
 TalentTokenHUD_C.Localization=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+BP_key_C.Tick=True
+BP_key_C.Replication=True
+BP_key_C.Rendering=True
+BP_key_C.Collision=True
+BP_key_C.Actor=True
+BP_key_C.Input=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest5.WorkingChest5;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest4.WorkingChest4;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest5.WorkingChest5;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest3.WorkingChest3;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
 RecentlyPlaced=/Game/InventorySystem/Chest/ChestBP.ChestBP;
@@ -1267,6 +1270,8 @@ None=======
 /Game/Evan/KeystoneImport/Dragonslayer.Dragonslayer=1
 /Game/InventorySystem/InventoryInst.InventoryInst=1
 /Game/InventorySystem/TalentToken.TalentToken=1
+/Game/InventorySystem/UI/TalentTokenHUD.TalentTokenHUD=1
+/Game/InventorySystem/Consumables/TalentToken.TalentToken=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1306,12 +1311,12 @@ NodeTemplateCacheCapMB=20.000000
 
 [DetailPropertyExpansion]
 TestChest2_C=
-WorkingChest1_C="\"Object.Default.Chest_Items\" \"Object.Default.Chest_Items.Chest_Items[0]\" \"Object.Default.Chest_Items.Chest_Items[1]\" "
+WorkingChest1_C="\"Object.Default.Chest_Items\" \"Object.Default.Chest_Items.Chest_Items[0]\" "
 ManaPotion_C="\"Object.Default.ItemInfoStruct\" "
 InventoryInst_C=
 GameInstance=
 Object=
-InventorySlotWG_C=
+InventorySlotWG_C="\"Object.UseHUD\" "
 UserWidget=
 Widget=
 Visual=
@@ -1355,6 +1360,7 @@ StaminaPotion_C="\"Object.Default.ItemInfoStruct\" "
 PlayerController="\"Object.bShowMouseCursor\" "
 ChestInventoryWG_C="\"Object.Inventory\" "
 Image="\"Object.Appearance.Brush\" "
+WorkingChest4_C="\"Object.Default.Chest_Items\" \"Object.Default.Chest_Items.Chest_Items[0]\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1371,8 +1377,8 @@ PropertyWrapper.Variable=False
 PreviewMaterial.Material=True
 
 [RootWindow]
-ScreenPosition=X=0.800 Y=341.600
-WindowSize=X=1289.600 Y=729.600
+ScreenPosition=X=-383.200 Y=155.200
+WindowSize=X=1291.200 Y=731.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
