--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,7 +69,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-2Q0JLK0
 LastExecutedLaunchName=DESKTOP-2Q0JLK0
 LastExecutedPIEPreviewDevice=
@@ -134,7 +134,7 @@ MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
 MRUItem2=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Tanner/Pause_Menu
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -210,31 +210,34 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/InventorySystem/Consumables/HealthPotion.HealthPotion
-OpenAssetsAtExit=/Game/InventorySystem/UI/InventoryWG.InventoryWG
-OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_key.BP_key
+OpenAssetsAtExit=/Game/KeystoneThirdPerson/Blueprints/HUD/Death.Death
+OpenAssetsAtExit=/Game/Player.Player
+OpenAssetsAtExit=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn.ChooseRespawn
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/LoadWidget.LoadWidget
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/MainMenuWidget.MainMenuWidget
+OpenAssetsAtExit=/Game/Tanner/Pause_Menu/PauseMenuWidget.PauseMenuWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MedievalDungeon/Blueprints/BP_key
-MRUItem1=/Game/InventorySystem/Consumables/TalentToken
-MRUItem2=/Game/InventorySystem/UI/InventoryWG
-MRUItem3=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem4=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem5=/Game/InventorySystem/UI/TalentTokenHUD
-MRUItem6=/Game/Player
-MRUItem7=/Game/InventorySystem/TalentToken
-MRUItem8=/Game/InventorySystem/UI/ChestSlotWG
-MRUItem9=/Game/InventorySystem/Consumables/ManaPotion
-MRUItem10=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem11=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem12=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem13=/Game/InventorySystem/Chest/WorkingChest3
-MRUItem14=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem15=/Game/InventorySystem/UI/ChestInventoryWG
-MRUItem16=/Game/InventorySystem/UI/PickupWG
-MRUItem17=/Game/InventorySystem/Consumables/StaminaPotion
-MRUItem18=/Game/InventorySystem/InventoryInst
-MRUItem19=/Game/InventorySystem/Struct_ItemInfo
+MRUItem0=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem1=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
+MRUItem2=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem3=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
+MRUItem4=/Game/Player
+MRUItem5=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
+MRUItem6=/Game/MedievalDungeon/Blueprints/BP_key
+MRUItem7=/Game/InventorySystem/Consumables/TalentToken
+MRUItem8=/Game/InventorySystem/UI/InventoryWG
+MRUItem9=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem10=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem11=/Game/InventorySystem/UI/TalentTokenHUD
+MRUItem12=/Game/InventorySystem/TalentToken
+MRUItem13=/Game/InventorySystem/UI/ChestSlotWG
+MRUItem14=/Game/InventorySystem/Consumables/ManaPotion
+MRUItem15=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem16=/Game/InventorySystem/Chest/WorkingChest5
+MRUItem17=/Game/InventorySystem/Chest/WorkingChest4
+MRUItem18=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem19=/Game/InventorySystem/Chest/WorkingChest2
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -1160,6 +1163,41 @@ BP_key_C.Rendering=True
 BP_key_C.Collision=True
 BP_key_C.Actor=True
 BP_key_C.Input=True
+ChooseRespawn_C.Appearance=True
+ChooseRespawn_C.Designer=True
+ChooseRespawn_C.Input=True
+ChooseRespawn_C.Interaction=True
+ChooseRespawn_C.Performance=True
+ChooseRespawn_C.Layout=True
+ChooseRespawn_C.Behavior=True
+ChooseRespawn_C.Render Transform=True
+ChooseRespawn_C.Accessibility=True
+ChooseRespawn_C.Clipping=True
+ChooseRespawn_C.Navigation=True
+ChooseRespawn_C.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest4.WorkingChest4;
@@ -1317,21 +1355,21 @@ InventoryInst_C=
 GameInstance=
 Object=
 InventorySlotWG_C="\"Object.UseHUD\" "
-UserWidget=
+UserWidget="\"Object.As My Save Game\" "
 Widget=
 Visual=
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
 Player_C=
-Player_C="\"Object.TalentTokenCounter\" "
+Player_C="\"Object.respawn\" "
 None=======
 None=======
-Character="\"Object.TalentTokenCounter\" "
-Pawn="\"Object.TalentTokenCounter\" "
+Character="\"Object.respawn\" "
+Pawn="\"Object.respawn\" "
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
 InventoryWG_C=
-LoadWidget_C=
+LoadWidget_C="\"Object.As My Save Game\" "
 MyGameInstance_C="\"Object.DungeonLevelName\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1361,6 +1399,10 @@ PlayerController="\"Object.bShowMouseCursor\" "
 ChestInventoryWG_C="\"Object.Inventory\" "
 Image="\"Object.Appearance.Brush\" "
 WorkingChest4_C="\"Object.Default.Chest_Items\" \"Object.Default.Chest_Items.Chest_Items[0]\" "
+KnightHealth_C="\"Object.Health\" "
+TextBlock=
+TextLayoutWidget=
+ChooseRespawn_C="\"Object.As My Save Game\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1377,8 +1419,8 @@ PropertyWrapper.Variable=False
 PreviewMaterial.Material=True
 
 [RootWindow]
-ScreenPosition=X=-383.200 Y=155.200
-WindowSize=X=1291.200 Y=731.200
+ScreenPosition=X=309.000 Y=149.000
+WindowSize=X=1291.000 Y=731.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1395,7 +1437,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content
+UNR=../../../../../KeyStone/docs/Project/KeyStone/Content
 BRUSH=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 FBX=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 FBXAnim=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
@@ -2393,6 +2435,9 @@ Dragon_C=
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 PlayerController=
 ChestInventoryWG_C=
+KnightHealth_C=
+ChooseRespawn_C=
+PauseMenuWidget_C=
 
 [SelectionDetails]
 PreserveScaleRatio=True
