"Desktop"->Changed to "Quit"

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,6 +76,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -134,7 +135,7 @@ MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
 MRUItem2=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Tanner/Pause_Menu
+ContentBrowserTab1.SelectedPaths=/Game/KeystoneThirdPerson/Blueprints/HUD
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -210,18 +211,12 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/KeystoneThirdPerson/Blueprints/HUD/Death.Death
-OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn.ChooseRespawn
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/LoadWidget.LoadWidget
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/MainMenuWidget.MainMenuWidget
-OpenAssetsAtExit=/Game/Tanner/Pause_Menu/PauseMenuWidget.PauseMenuWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem1=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
-MRUItem2=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem3=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
+MRUItem0=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
+MRUItem1=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem2=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
+MRUItem3=/Game/Tanner/MainMenu/Widgets/LoadWidget
 MRUItem4=/Game/Player
 MRUItem5=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
 MRUItem6=/Game/MedievalDungeon/Blueprints/BP_key
@@ -1310,6 +1305,7 @@ None=======
 /Game/InventorySystem/TalentToken.TalentToken=1
 /Game/InventorySystem/UI/TalentTokenHUD.TalentTokenHUD=1
 /Game/InventorySystem/Consumables/TalentToken.TalentToken=1
+/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn.ChooseRespawn=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
