--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,14 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-2Q0JLK0
 LastExecutedLaunchName=DESKTOP-2Q0JLK0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -135,13 +134,13 @@ MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
 MRUItem2=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/KeystoneThirdPerson/Blueprints/HUD
+ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.389422
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.610579
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.308049
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.691951
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
@@ -213,26 +212,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
-MRUItem1=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem2=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
-MRUItem3=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem4=/Game/Player
-MRUItem5=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
-MRUItem6=/Game/MedievalDungeon/Blueprints/BP_key
-MRUItem7=/Game/InventorySystem/Consumables/TalentToken
-MRUItem8=/Game/InventorySystem/UI/InventoryWG
-MRUItem9=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem10=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem11=/Game/InventorySystem/UI/TalentTokenHUD
-MRUItem12=/Game/InventorySystem/TalentToken
-MRUItem13=/Game/InventorySystem/UI/ChestSlotWG
-MRUItem14=/Game/InventorySystem/Consumables/ManaPotion
-MRUItem15=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem16=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem17=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem18=/Game/InventorySystem/Chest/WorkingChest3
-MRUItem19=/Game/InventorySystem/Chest/WorkingChest2
+MRUItem0=/Game/InventorySystem/Consumables/TalentToken
+MRUItem1=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem2=/Game/InventorySystem/TalentTokenTexture
+MRUItem3=/Game/InventorySystem/UI/TalentTokenHUD
+MRUItem4=/Game/InventorySystem/Chest/WorkingChest2
+MRUItem5=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem6=/Game/InventorySystem/Chest/WorkingChest5
+MRUItem7=/Game/InventorySystem/Chest/WorkingChest4
+MRUItem8=/Game/InventorySystem/upgrade
+MRUItem9=/Game/Player
+MRUItem10=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
+MRUItem11=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem12=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
+MRUItem13=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem14=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
+MRUItem15=/Game/MedievalDungeon/Blueprints/BP_key
+MRUItem16=/Game/InventorySystem/UI/InventoryWG
+MRUItem17=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem18=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem19=/Game/InventorySystem/TalentToken
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -1193,11 +1192,195 @@ K2Node_Composite.GraphNodeDetail=True
 K2Node_Composite.Graph=True
 K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=False
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.World=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorSettings.DerivedDataCache=True
+EditorSettings.Derived Data Cache S3=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommand=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.LiveLinkClient.Common=True
+EditorKeyboardShortcutSettings.TakeRecorder=True
+EditorKeyboardShortcutSettings.TakeRecorderSources=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MemoryProfilerCommand=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommand=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.OculusTool=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.SteamVREditor=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.TextureEditor=True
+EditorKeyboardShortcutSettings.TimingProfilerCommand=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+EditorPerformanceSettings.EditorPerformance=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+SynthesisEditorSettings.Source Effects=True
+SynthesisEditorSettings.Submix Effects=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Experimental=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+GraphEditorSettings.ContextMenu=True
+GraphEditorSettings.CommentNodes=True
+MaterialEditorSettings.Offline Shader Compilers=True
+MaterialEditorSettings.User Interface Domain=True
+MeshPaintSettings.Visualization=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TakeRecorderUserSettings.User Settings=True
+TextureEditorSettings.Background=True
+TextureEditorSettings.TextureBorder=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+PythonScriptPluginUserSettings.Python=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.PIE Test Maps=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+DataValidationSettings.Validation Scenarios=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+LogVisualizerSettings.VisualLogger=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest4.WorkingChest4;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest5.WorkingChest5;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest3.WorkingChest3;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
 RecentlyPlaced=/Game/InventorySystem/Chest/ChestBP.ChestBP;
@@ -1306,6 +1489,9 @@ None=======
 /Game/InventorySystem/UI/TalentTokenHUD.TalentTokenHUD=1
 /Game/InventorySystem/Consumables/TalentToken.TalentToken=1
 /Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn.ChooseRespawn=1
+/Game/Player.Player=1
+/Game/InventorySystem/upgrade.upgrade=1
+/Game/InventorySystem/TalentTokenTexture.TalentTokenTexture=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1351,17 +1537,17 @@ InventoryInst_C=
 GameInstance=
 Object=
 InventorySlotWG_C="\"Object.UseHUD\" "
-UserWidget="\"Object.As My Save Game\" "
-Widget=
-Visual=
+UserWidget=
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
 Player_C=
-Player_C="\"Object.respawn\" "
+Player_C=
 None=======
 None=======
-Character="\"Object.respawn\" "
-Pawn="\"Object.respawn\" "
+Character=
+Pawn=
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
 InventoryWG_C=
@@ -1394,11 +1580,16 @@ StaminaPotion_C="\"Object.Default.ItemInfoStruct\" "
 PlayerController="\"Object.bShowMouseCursor\" "
 ChestInventoryWG_C="\"Object.Inventory\" "
 Image="\"Object.Appearance.Brush\" "
-WorkingChest4_C="\"Object.Default.Chest_Items\" \"Object.Default.Chest_Items.Chest_Items[0]\" "
+WorkingChest4_C="\"Object.Default.Chest_Items\" "
 KnightHealth_C="\"Object.Health\" "
 TextBlock=
 TextLayoutWidget=
 ChooseRespawn_C="\"Object.As My Save Game\" "
+TalentToken_C="\"Object.Default.ItemInfoStruct\" "
+WorkingChest5_C="\"Object.Chest_Items\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1413,10 +1604,13 @@ InstalledPlugins=XRVisualization
 K2Node_VariableGet.Variable=True
 PropertyWrapper.Variable=False
 PreviewMaterial.Material=True
+Texture2D.LevelOfDetail=False
+Texture2D.Texture=True
+Texture2D.Compression=True
 
 [RootWindow]
-ScreenPosition=X=309.000 Y=149.000
-WindowSize=X=1291.000 Y=731.000
+ScreenPosition=X=308.800 Y=148.800
+WindowSize=X=1294.400 Y=734.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1433,7 +1627,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../KeyStone/docs/Project/KeyStone/Content
+UNR=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content
 BRUSH=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 FBX=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 FBXAnim=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
@@ -2341,6 +2535,8 @@ SkeletonEditor.TimeStamp=2022.01.22-23.12.17
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.01.22-23.12.11
 PinnedCommandList.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.02.02-13.58.54
+TextureEditor.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2434,6 +2630,8 @@ ChestInventoryWG_C=
 KnightHealth_C=
 ChooseRespawn_C=
 PauseMenuWidget_C=
+TalentToken_C=
+WorkingChest5_C=
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -2447,6 +2645,8 @@ Pawn=
 KnightController_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 Character=
 CharacterMovementComponent=
+EditorStyleSettings=True
+TextureEditorSettings=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
