--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,7 +69,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-2Q0JLK0
 LastExecutedLaunchName=DESKTOP-2Q0JLK0
 LastExecutedPIEPreviewDevice=
@@ -134,7 +134,7 @@ MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
 MRUItem2=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
+ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -210,18 +210,19 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Player.Player
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InventorySystem/Consumables/TalentToken
-MRUItem1=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem2=/Game/InventorySystem/TalentTokenTexture
-MRUItem3=/Game/InventorySystem/UI/TalentTokenHUD
-MRUItem4=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem5=/Game/InventorySystem/Chest/WorkingChest3
-MRUItem6=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem7=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem8=/Game/InventorySystem/upgrade
-MRUItem9=/Game/Player
+MRUItem0=/Game/Player
+MRUItem1=/Game/InventorySystem/Consumables/TalentToken
+MRUItem2=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem3=/Game/InventorySystem/TalentTokenTexture
+MRUItem4=/Game/InventorySystem/UI/TalentTokenHUD
+MRUItem5=/Game/InventorySystem/Chest/WorkingChest2
+MRUItem6=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem7=/Game/InventorySystem/Chest/WorkingChest5
+MRUItem8=/Game/InventorySystem/Chest/WorkingChest4
+MRUItem9=/Game/InventorySystem/upgrade
 MRUItem10=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
 MRUItem11=/Game/Tanner/Pause_Menu/PauseMenuWidget
 MRUItem12=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
@@ -1543,11 +1544,11 @@ Visual="\"Object.Appearance.Brush\" "
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
 Player_C=
-Player_C=
+Player_C="\"Object.BarRef\" "
 None=======
 None=======
-Character=
-Pawn=
+Character="\"Object.BarRef\" "
+Pawn="\"Object.BarRef\" "
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
 InventoryWG_C=
@@ -1609,8 +1610,8 @@ Texture2D.Texture=True
 Texture2D.Compression=True
 
 [RootWindow]
-ScreenPosition=X=308.800 Y=148.800
-WindowSize=X=1294.400 Y=734.400
+ScreenPosition=X=308.000 Y=148.000
+WindowSize=X=1294.000 Y=734.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
