--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,6 +76,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -129,9 +130,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/NEW_DungeonLevel_TEST
-MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem2=/Game/DungeonTESTLevel1
+MRUItem0=/Game/Tanner/Levels/MainMenuLevel
+MRUItem1=/Game/NEW_DungeonLevel_TEST
+MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem3=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
@@ -204,7 +206,7 @@ SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/DungeonLevel_MAZE_ADDED
-LastLevel=/Game/NEW_DungeonLevel_TEST
+LastLevel=/Game/Tanner/Levels/MainMenuLevel
 None=======
 
 [AssetEditorSubsystem]
@@ -213,26 +215,26 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Player.Player
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player
-MRUItem1=/Game/InventorySystem/Consumables/TalentToken
-MRUItem2=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem3=/Game/InventorySystem/TalentTokenTexture
-MRUItem4=/Game/InventorySystem/UI/TalentTokenHUD
-MRUItem5=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem6=/Game/InventorySystem/Chest/WorkingChest3
-MRUItem7=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem8=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem9=/Game/InventorySystem/upgrade
-MRUItem10=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
-MRUItem11=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem12=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
-MRUItem13=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem14=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
-MRUItem15=/Game/MedievalDungeon/Blueprints/BP_key
-MRUItem16=/Game/InventorySystem/UI/InventoryWG
-MRUItem17=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem18=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem19=/Game/InventorySystem/TalentToken
+MRUItem0=/Game/Tanner/Levels/MainMenuLevel
+MRUItem1=/Game/Player
+MRUItem2=/Game/InventorySystem/Consumables/TalentToken
+MRUItem3=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem4=/Game/InventorySystem/TalentTokenTexture
+MRUItem5=/Game/InventorySystem/UI/TalentTokenHUD
+MRUItem6=/Game/InventorySystem/Chest/WorkingChest2
+MRUItem7=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem8=/Game/InventorySystem/Chest/WorkingChest5
+MRUItem9=/Game/InventorySystem/Chest/WorkingChest4
+MRUItem10=/Game/InventorySystem/upgrade
+MRUItem11=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
+MRUItem12=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem13=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
+MRUItem14=/Game/Tanner/MainMenu/Widgets/LoadWidget
+MRUItem15=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
+MRUItem16=/Game/MedievalDungeon/Blueprints/BP_key
+MRUItem17=/Game/InventorySystem/UI/InventoryWG
+MRUItem18=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem19=/Game/InventorySystem/Consumables/HealthPotion
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -1544,11 +1546,11 @@ Visual="\"Object.Appearance.Brush\" "
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
 Player_C=
-Player_C="\"Object.BarRef\" "
+Player_C="\"Object.TutorialInputUpgradeTree\" "
 None=======
 None=======
-Character="\"Object.BarRef\" "
-Pawn="\"Object.BarRef\" "
+Character="\"Object.TutorialInputUpgradeTree\" "
+Pawn="\"Object.TutorialInputUpgradeTree\" "
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
 InventoryWG_C=
@@ -1596,7 +1598,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 ChangeVariableType_Warning=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1628,7 +1630,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content
+UNR=../../../../../KeyStone/docs/Project/KeyStone/Content
 BRUSH=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 FBX=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 FBXAnim=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
