added more item slots

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -213,11 +213,11 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
+OpenAssetsAtExit=/Game/InventorySystem/UI/InventoryWG.InventoryWG
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem1=/Game/InventorySystem/UI/InventoryWG
+MRUItem0=/Game/InventorySystem/UI/InventoryWG
+MRUItem1=/Game/InventorySystem/UI/InventorySlotWG
 MRUItem2=/Game/Tanner/Levels/MainMenuLevel
 MRUItem3=/Game/Player
 MRUItem4=/Game/InventorySystem/Consumables/TalentToken
@@ -1389,6 +1389,7 @@ PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
+InventorySlotWG_C.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
@@ -1563,7 +1564,7 @@ Character="\"Object.TutorialInputUpgradeTree\" "
 Pawn="\"Object.TutorialInputUpgradeTree\" "
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
-InventoryWG_C=
+InventoryWG_C="\"Object.InventorySlotArray\" "
 LoadWidget_C="\"Object.As My Save Game\" "
 MyGameInstance_C="\"Object.DungeonLevelName\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1623,7 +1624,7 @@ Texture2D.Compression=True
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=148.000
-WindowSize=X=1296.000 Y=736.000
+WindowSize=X=1297.600 Y=737.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
