cleaning up code

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,7 +137,7 @@ MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
 MRUItem3=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/UI
+ContentBrowserTab1.SelectedPaths=/Game/Alexis/AI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -213,29 +213,28 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/InventorySystem/UI/InventoryWG.InventoryWG
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InventorySystem/UI/InventoryWG
-MRUItem1=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem2=/Game/Tanner/Levels/MainMenuLevel
-MRUItem3=/Game/Player
-MRUItem4=/Game/InventorySystem/Consumables/TalentToken
-MRUItem5=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem6=/Game/InventorySystem/TalentTokenTexture
-MRUItem7=/Game/InventorySystem/UI/TalentTokenHUD
-MRUItem8=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem9=/Game/InventorySystem/Chest/WorkingChest3
-MRUItem10=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem11=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem12=/Game/InventorySystem/upgrade
-MRUItem13=/Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn
-MRUItem14=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem15=/Game/Tanner/MainMenu/Widgets/MainMenuWidget
-MRUItem16=/Game/Tanner/MainMenu/Widgets/LoadWidget
-MRUItem17=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
-MRUItem18=/Game/MedievalDungeon/Blueprints/BP_key
-MRUItem19=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem0=/Game/Alexis/AI/KnightController
+MRUItem1=/Game/Humza/SkeletonNoArmor/SkeletonBBnoArmor
+MRUItem2=/Game/Humza/SkeletonNoArmor/SkeleNoArmorAiController
+MRUItem3=/Game/Alexis/AI/speedChange
+MRUItem4=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
+MRUItem5=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
+MRUItem6=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
+MRUItem7=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
+MRUItem8=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
+MRUItem9=/Game/Alexis/AI/EnemyAiAttacks/Task/DecrementPath
+MRUItem10=/Game/Alexis/AI/EnemyAiAttacks/Task/IncrementPath
+MRUItem11=/Game/Alexis/AI/EnemyAiAttacks/Task/FindPathPoint
+MRUItem12=/Game/Alexis/AI/KnightBT
+MRUItem13=/Game/Alexis/AI/KnightAI_BP
+MRUItem14=/Game/InventorySystem/UI/InventoryWG
+MRUItem15=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem16=/Game/Tanner/Levels/MainMenuLevel
+MRUItem17=/Game/Player
+MRUItem18=/Game/InventorySystem/Consumables/TalentToken
+MRUItem19=/Game/InventorySystem/Chest/WorkingChest1
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -1390,6 +1389,52 @@ PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
 InventorySlotWG_C.Events=True
+FindPathPoint_C.Default=True
+FindPathPoint_C.Task=True
+FindPathPoint_C.Description=True
+IncrementPath_C.Default=True
+IncrementPath_C.Task=True
+IncrementPath_C.Description=True
+DecrementPath_C.Default=True
+DecrementPath_C.Task=True
+DecrementPath_C.Description=True
+IsLooping_C.Default=True
+IsLooping_C.Task=True
+IsLooping_C.Description=True
+Attack1BTtask_C.Default=True
+Attack1BTtask_C.Task=True
+Attack1BTtask_C.Description=True
+IsInCloseRangeDistance_C.FlowControl=True
+IsInCloseRangeDistance_C.Default=True
+IsInCloseRangeDistance_C.Description=True
+IsInCloseRangeDistance_C.Condition=True
+stanceChange_C.Task=True
+stanceChange_C.Description=True
+stanceChange_C.Default=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+speedChange_C.Default=True
+speedChange_C.Description=True
+speedChange_C.Service=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+KnightController_C.Tick=True
+KnightController_C.Default=True
+KnightController_C.AI=True
+KnightController_C.Controller=True
+KnightController_C.Replication=True
+KnightController_C.Actor=True
+KnightController_C.Input=True
+SkeleNoArmorAiController_C.Tick=True
+SkeleNoArmorAiController_C.Default=True
+SkeleNoArmorAiController_C.AI=True
+SkeleNoArmorAiController_C.Controller=True
+SkeleNoArmorAiController_C.Replication=True
+SkeleNoArmorAiController_C.Actor=True
+SkeleNoArmorAiController_C.Input=True
+K2Node_SwitchInteger.PinOptions=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
@@ -1506,6 +1551,13 @@ None=======
 /Game/Player.Player=1
 /Game/InventorySystem/upgrade.upgrade=1
 /Game/InventorySystem/TalentTokenTexture.TalentTokenTexture=1
+/Game/Alexis/AI/KnightAI_BP.KnightAI_BP=1
+/Game/Alexis/AI/EnemyAiAttacks/Task/DecrementPath.DecrementPath=1
+/Game/Alexis/AI/EnemyAiAttacks/Task/IncrementPath.IncrementPath=1
+/Game/Alexis/AI/EnemyAiAttacks/Task/FindPathPoint.FindPathPoint=1
+/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance.IsInCloseRangeDistance=1
+/Game/Humza/SkeletonNoArmor/SkeleNoArmorAiController.SkeleNoArmorAiController=1
+/Game/Humza/SkeletonNoArmor/SkeletonBBnoArmor.SkeletonBBnoArmor=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1555,13 +1607,13 @@ UserWidget=
 Widget=
 Visual=
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
-ActorComponent=
+ActorComponent="\"Object.MaxWalkSpeed\" "
 Player_C=
 Player_C="\"Object.TutorialInputUpgradeTree\" "
 None=======
 None=======
-Character="\"Object.TutorialInputUpgradeTree\" "
-Pawn="\"Object.TutorialInputUpgradeTree\" "
+Character="\"Object.CharacterMovement\" "
+Pawn="\"Object.CharacterMovement\" "
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
 InventoryWG_C="\"Object.InventorySlotArray\" "
@@ -1573,13 +1625,13 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 Dragon_C=
 ChestBP_C="\"Object.Default.Chest_Items\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-KnightController_C="\"Object.My Pawn\" "
-AIController="\"Object.My Pawn\" "
-Controller="\"Object.bShowMouseCursor\" "
+KnightController_C=
+AIController=
+Controller=
 CharacterMovementComponent="\"Object.MaxWalkSpeed\" "
 PawnMovementComponent="\"Object.MaxWalkSpeed\" "
 NavMovementComponent="\"Object.MaxWalkSpeed\" "
@@ -1604,6 +1656,17 @@ WorkingChest5_C="\"Object.Chest_Items\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+FindPathPoint_C=
+BTTask_BlueprintBase=
+BTTaskNode=
+PatrolPath_C="\"Object.PathPoints\" "
+IncrementPath_C=
+DecrementPath_C=
+findplayerlocation_C=
+Attack1BTtask_C=
+KnightAI_BP_C="\"Object.CloseRangeAttackDistance\" "
+stanceChange_C=
+completeSenses="\"Struct.localSense\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1624,7 +1687,7 @@ Texture2D.Compression=True
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=148.000
-WindowSize=X=1297.600 Y=737.600
+WindowSize=X=1297.000 Y=737.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2646,6 +2709,18 @@ ChooseRespawn_C=
 PauseMenuWidget_C=
 TalentToken_C=
 WorkingChest5_C=
+FindPathPoint_C=
+PatrolPath_C=
+IncrementPath_C=
+DecrementPath_C=
+findplayerlocation_C=
+Attack1BTtask_C=
+KnightAI_BP_C=
+Character=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+CharacterMovementComponent=
+stanceChange_C=
+KnightController_C=
+completeSenses=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 
 [SelectionDetails]
 PreserveScaleRatio=True
